@@ -2735,6 +2735,8 @@ typedef struct slurm_ctl_conf {
 	char *mail_domain;	/* default domain to append to usernames */
 	char *mail_prog;	/* pathname of mail program */
 	uint32_t max_array_sz;	/* Maximum job array size */
+	uint32_t max_dbd_msgs;	/* maximum number of messages queued while DBD
+				 * is not connected */
 	uint32_t max_job_cnt;	/* maximum number of active jobs */
 	uint32_t max_job_id;	/* maximum job id before using first_job_id */
 	uint64_t max_mem_per_cpu; /* maximum MB memory per allocated CPU */
