@@ -5811,6 +5811,7 @@ _pack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t * build_ptr, Buf buffer,
 		pack16(build_ptr->log_fmt, buffer);
 
 		pack32(build_ptr->max_array_sz, buffer);
+		pack32(build_ptr->max_dbd_msgs, buffer);
 		packstr(build_ptr->mail_domain, buffer);
 		packstr(build_ptr->mail_prog, buffer);
 		pack32(build_ptr->max_job_cnt, buffer);
@@ -6742,6 +6743,7 @@ _unpack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t **build_buffer_ptr,
 		safe_unpack16(&build_ptr->log_fmt, buffer);
 
 		safe_unpack32(&build_ptr->max_array_sz, buffer);
+		safe_unpack32(&build_ptr->max_dbd_msgs, buffer);
 		safe_unpackstr_xmalloc(&build_ptr->mail_domain,
 				       &uint32_tmp, buffer);
 		safe_unpackstr_xmalloc(&build_ptr->mail_prog,
