@@ -47,7 +47,6 @@
 #include "slurmdbd_agent.h"
 
 #define DBD_MAGIC		0xDEAD3219
-#define MAX_AGENT_QUEUE		10000
 #define SLURMDBD_TIMEOUT	900	/* Seconds SlurmDBD for response */
 #define DEBUG_PRINT_MAX_MSG_TYPES 10
 
@@ -1146,9 +1145,8 @@ extern int send_slurmdbd_recv_rc_msg(uint16_t rpc_version,
 extern int send_slurmdbd_msg(uint16_t rpc_version, slurmdbd_msg_t *req)
 {
 	Buf buffer;
-	int cnt, rc = SLURM_SUCCESS;
+	uint32_t cnt, rc = SLURM_SUCCESS;
 	static time_t syslog_time = 0;
-	static int max_agent_queue = 0;
 
 	if (slurmctld_conf.debug_flags & DEBUG_FLAG_PROTOCOL)
 		info("%s: msg_type:%s protocol_version:%hu agent_count:%d",
@@ -1158,11 +1156,11 @@ extern int send_slurmdbd_msg(uint16_t rpc_version, slurmdbd_msg_t *req)
 
 	/*
 	 * Whatever our max job count is multiplied by 2 plus node count
-	 * multiplied by 4 or MAX_AGENT_QUEUE which ever is bigger.
+	 * multiplied by 4 or DEFAULT_MAX_DBD_MSGS which ever is bigger.
 	 */
-	if (!max_agent_queue)
-		max_agent_queue =
-			MAX(MAX_AGENT_QUEUE,
+	if (!slurmctld_conf.max_dbd_msgs)
+		slurmctld_conf.max_dbd_msgs =
+			MAX(DEFAULT_MAX_DBD_MSGS,
 			    ((slurmctld_conf.max_job_cnt * 2) +
 			     (node_record_count * 4)));
 
@@ -1181,21 +1179,21 @@ extern int send_slurmdbd_msg(uint16_t rpc_version, slurmdbd_msg_t *req)
 		}
 	}
 	cnt = list_count(agent_list);
-	if ((cnt >= (max_agent_queue / 2)) &&
+	if ((cnt >= (slurmctld_conf.max_dbd_msgs / 2)) &&
 	    (difftime(time(NULL), syslog_time) > 120)) {
 		/* Record critical error every 120 seconds */
 		syslog_time = time(NULL);
-		error("slurmdbd: agent queue filling (%d), RESTART SLURMDBD NOW",
-		      cnt);
+		error("slurmdbd: agent queue filling (%u), MaxDBDMsgs=%u, RESTART SLURMDBD NOW",
+		      cnt, slurmctld_conf.max_dbd_msgs);
 		syslog(LOG_CRIT, "*** RESTART SLURMDBD NOW ***");
 		if (slurmdbd_conn->trigger_callbacks.dbd_fail)
 			(slurmdbd_conn->trigger_callbacks.dbd_fail)();
 	}
-	if (cnt == (max_agent_queue - 1))
+	if (cnt == (slurmctld_conf.max_dbd_msgs - 1))
 		cnt -= _purge_step_req();
-	if (cnt == (max_agent_queue - 1))
+	if (cnt == (slurmctld_conf.max_dbd_msgs - 1))
 		cnt -= _purge_job_start_req();
-	if (cnt < max_agent_queue) {
+	if (cnt < slurmctld_conf.max_dbd_msgs) {
 		if (list_enqueue(agent_list, buffer) == NULL)
 			fatal("list_enqueue: memory allocation failure");
 	} else {
