@@ -31,6 +31,8 @@ documents those changes that are of interest to users and administrators.
  -- Append ": reboot issued" to node reason when reboot is issued from
     controller. Previously only happened when nextstate was specified.
  -- Add default jobname of "no-shell" for salloc --no-shell.
+ -- Add slurm.conf option MaxDBDMsgs to control how many messages will be
+    stored in the slurmctld before throwing them away when the slurmdbd is down.
 
 * Changes in Slurm 19.05.4
 ==========================
